# RainFall

./: .gitignore  README.md  clean-big-files.py
cartago/.ipynb_checkpoints/: cartago-checkpoint.ipynb
data/appache/: apache_products.json  appache.ipynb
data/babel/: babel.ipynb  language_applications.json
data/bakery/: main.ipynb
data/basket/: basket_analysis.ipynb
data/bin-packing/: Bin packing with or tools.ipynb
data/boto/: boto-services.ipynb  boto-support.json
data/clouds/: cloud.txt  cloudCollection.ipynb  cloud_categories.json  cloud_services.json
data/continuousIntervals/: setInterval.ipynb
data/continuousIntervals/intervals/: .coverage  README.md  pyproject.toml  pytest.ini
data/continuousIntervals/intervals/src/: intervals.py  utils.py
data/continuousIntervals/intervals/tests/: conftest.py  test_continuous_interval.py  test_point.py
data/cosmopol/: Untitled.ipynb  brazil_cities.csv  capital_positions.txt  cities_coords.csv  cities_old.csv  cosmopol.ipynb  near_cities.ipynb
data/flygon/: airport_research.ipynb  airports.csv  airports.txt  airports_count.csv
data/geodesics/: ellipsoid_geodesics.ipynb  geodesics.ipynb
data/lambdapi/: .coveragerc  Dockerfile  deploy_notebook.ipynb
data/llm_chat/: main.ipynb
data/pipedown/: luigi_example.py  pip_requirements.txt  word_count_hadoop.py  word_count_spark.py
data/pizzayolo/: pizza-ingredients.ipynb  pizzas.json
pilindrome/: server.js
web/tarzan/: Makefile  manage.py  pyproject.toml
web/tarzan/setup/: asgi.py  settings.py  wsgi.py
web/tarzan/src/migrations/: 0001_initial.py
(+170 files in other folders)
