[tool.poetry]
name = "intervals"
version = "0.1.0"
description = "Continuous intervals"
authors = ["Bruno Peixoto <brunolnetto@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
